--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@philly/mapboard": "^3.0.30",
     "vue": "^2.6.6",
     "vuex": "^3.0.1"
   },
