--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev-build": "vue-cli-service build --mode development"
   },
   "dependencies": {
-    "@philly/mapboard": "^3.0.31",
+    "@philly/mapboard": "https://github.com/CityOfPhiladelphia/mapboard#9a04a48a89aea756791016723a800eb3b532eebb",
     "vue": "^2.6.6",
     "vuex": "^3.0.1"
   },
